# HR_Analysis

./: .gitignore  README.md  baseline_models.ipynb  hr_analysiss_ED.ipynb  hr_analytics.ipynb  hr_analytics_ED.ipynb  hr_analytics_first_view.ipynb  hr_analytics_firstlook.ipynb  hr_analytics_modelling.ipynb  pyproject.toml
blog/: blog.md
utils/: baseline_models.py  utils.py
