[tool.poetry]
name = "hr_analysis"
version = "0.1.0"
description = "analysis for an udacity project"
authors = ["elenacramer <elenascramer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
notebook = "^6.2.0"
pandas = "^1.2.3"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
scikit-learn = "^0.24.1"
imbalanced-learn = "^0.8.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
